--- a/RouteMasterFrontend/Views/Home/Index.cshtml
+++ b/RouteMasterFrontend/Views/Home/Index.cshtml
@@ -94,6 +94,6 @@
 				所有行程都會儲存在雲端上。只需把您的行程網址跟朋友分享，他們就能一同參與規劃。如果在網上看見心儀的行程，更可直接把它套用為藍本，再按個人喜好修改。打造您的專屬行程，就是如此隨心所欲。
 			</div>
 		</div>
-		@await Component.InvokeAsync("TopTenAtt")
+		@*@await Component.InvokeAsync("TopTenAtt")*@
 	</main>
 </div>
