--- a/RouteMasterFrontend/Views/Members/Logout.cshtml
+++ b/RouteMasterFrontend/Views/Members/Logout.cshtml
@@ -2,3 +2,8 @@
 <body>
 <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="MemberLogin">登入</a>
 </body>
+
+
+@Html.Partial("yespartial")
+
+@Html.Partial("nopartial")
